--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         width: 100%;
         height: 100%;
         top: 0;
-        left: 0;}
+        left: 0;
+        pointer-events: none;}
     </style>
   </head>
   <body>
